[package]
name = "spring-2024-nico6bury"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.4", features = ["fltk-bundled"] }
fltk-theme = "0.7.2"
grid = "0.13.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
